# quik-connector

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.yml  library.cpp  library.h  quik-connector.lua
apps/tools/: quik-flags-debug.cpp
cmake/: build-dependencies.cmake  create-output-directory-tree.cmake
cmake/template/: quik-connector.lua.in
component/redis/: Redis.cpp
config/: config.yml
db/migrations/: V1.0__init.sql
dto/candle/: CandleDto.h  ChangedCandleDto.h
dto/class/: ClassInfoDto.h
dto/config/: Config.h
dto/connector/request/: RequestDto.h
dto/lua/: FunctionArgDto.h
dto/option/: Option.h
dto/order/: OrderCommissionDto.h
dto/quik/: QuikUserInfoDto.h
dto/quote/: TickerQuoteDto.h
dto/trade/: TradeDto.h
lua-5.3.5/: build.bat
mapper/candle/: CandleMapper.h
mapper/class/: ClassInfoMapper.h
mapper/date/: DateMapper.h
mapper/order/: OrderMapper.cpp  OrderMapper.h
mapper/quik/: QuikServerMapper.h
mapper/quote/: QuoteMapper.cpp  QuoteMapper.h
mapper/request/: RequestMapper.cpp  RequestMapper.h
mapper/ticker/: TickerMapper.h
mapper/trade/: TradeMapper.cpp  TradeMapper.h
service/config/: ConfigService.cpp  ConfigService.h
service/log/: Logger.cpp  log.c
service/lua/: Lua.cpp  Lua.h
service/queue/: QueueService.cpp  QueueService.h
service/quik/: Quik.cpp  Quik.h
service/quik/candle/: QuikCandleService.cpp  QuikCandleService.h
service/quik/order/: QuikOrderService.cpp  QuikOrderService.h
service/quik/utils/: QuikUtils.cpp  QuikUtils.h
service/utils/string/: StringUtils.h
src/: library.cpp  library.h  quik-tools.cpp  version.h  version.rc
src/component/compressor/: Compressor.cpp  Compressor.h
src/component/concurrent/: SmallConcurrentMap.cpp  SmallConcurrentMap.h
src/component/db/: Db.cpp  Db.h
src/component/debug/: DebugQuikFunctions.cpp  DebugQuikFunctions.h
src/component/quik/debug/: DebugQuikFunctions.cpp  DebugQuikFunctions.h
src/component/quik/validator/order/: OrderValidator.cpp  OrderValidator.h
src/component/redis/: Redis.cpp  Redis.h
src/component/telegram/: Telegram.cpp  Telegram.h
src/component/uuid/: Uuid.cpp  Uuid.h
src/component/validator/order/: OrderValidator.cpp  OrderValidator.h
src/dto/candle/: CandleDto.h  CandleSubscriptionDto.h
src/dto/config/: Config.h  version.rc
src/dto/connector/request/: RequestDto.h
src/dto/connector/subscription/: QuikSubscriptionDto.h
src/dto/lua/: FunctionArgDto.h
src/dto/option/: Option.h
src/dto/order/: OrderCommissionDto.h  OrderDto.h  StopOrderDto.h
src/dto/quik/: QuikConnectionStatusDto.h
src/dto/quik/account/: TradeAccountDto.h
src/dto/quik/candle/: CandleDto.h  ChangedCandleDto.h
src/dto/quik/class/: ClassInfoDto.h
src/dto/quik/connector/request/: RequestDto.h
src/dto/quik/depo/: DepoLimitDto.h
src/dto/quik/limit/: DepoLimitDto.h  FutureLimitDto.h  MoneyLimitDto.h
src/dto/quik/lua/: FunctionArgDto.h
src/dto/quik/money/: MoneyLimitDto.h
src/dto/quik/order/: OrderCommissionDto.h  OrderDto.h  StopOrderDto.h
src/dto/quik/param/: ParamDto.h
src/dto/quik/quote/: TickerQuoteDto.h
src/dto/quik/server/: QuikConnectionStatusDto.h  QuikUserInfoDto.h
src/dto/quik/ticker/: TickerDto.h
src/dto/quik/trade/: MaxTradeLotsDto.h  TradeDto.h
src/dto/quik/transaction/: TransactionReplyDto.h
src/dto/response/: ResponseDto.h
src/dto/ticker/: TickerDto.h
src/dto/trade/: TradeDto.h
src/entity/quik/order/: OrderCommissionEntity.h  OrderEntity.h
src/mapper/candle/: CandleMapper.cpp  CandleMapper.h
src/mapper/class/: ClassInfoMapper.cpp
src/mapper/date/: DateMapper.cpp
src/mapper/depo/: DepoLimitMapper.h
src/mapper/money/: MoneyLimitMapper.cpp  MoneyLimitMapper.h
src/mapper/order/: OrderMapper.cpp  OrderMapper.h
src/mapper/param/: ParamMapper.h
src/mapper/quik/: QuikServerMapper.cpp  QuikServerMapper.h
src/mapper/quik/account/: TradeAccountMapper.cpp  TradeAccountMapper.h
src/mapper/quik/candle/: CandleMapper.cpp  CandleMapper.h
src/mapper/quik/class/: ClassInfoMapper.cpp  ClassInfoMapper.h
src/mapper/quik/date/: DateMapper.cpp  DateMapper.h
src/mapper/quik/depo/: DepoLimitMapper.cpp  DepoLimitMapper.h
src/mapper/quik/future/: FutureLimitMapper.cpp  FutureLimitMapper.h
src/mapper/quik/money/: MoneyLimitMapper.cpp  MoneyLimitMapper.h
src/mapper/quik/order/: OrderMapper.cpp  OrderMapper.h
src/mapper/quik/param/: ParamMapper.cpp  ParamMapper.h
src/mapper/quik/quote/: QuoteMapper.cpp  QuoteMapper.h
src/mapper/quik/request/: RequestMapper.cpp  RequestMapper.h
src/mapper/quik/server/: QuikServerMapper.cpp  QuikServerMapper.h
src/mapper/quik/ticker/: TickerMapper.cpp  TickerMapper.h
src/mapper/quik/trade/: TradeMapper.cpp  TradeMapper.h
src/mapper/quik/transaction/: TransactionMapper.cpp  TransactionMapper.h
src/mapper/quote/: QuoteMapper.cpp
src/mapper/request/: RequestMapper.cpp  RequestMapper.h
src/mapper/response/: ResponseMapper.cpp  ResponseMapper.h
src/mapper/ticker/: TickerMapper.cpp  TickerMapper.h
src/mapper/trade/: TradeMapper.cpp  TradeMapper.h
src/mapper/transaction/: TransactionMapper.cpp  TransactionMapper.h
src/repository/order/: OrderRepository.cpp  OrderRepository.h
src/repository/quik/order/: OrderRepository.cpp  OrderRepository.h
src/service/config/: ConfigService.cpp  ConfigService.h
src/service/log/: Logger.cpp  Logger.h  log.h
src/service/lua/: Lua.cpp  Lua.h
src/service/queue/: QueueService.cpp  QueueService.h
src/service/quik/: Quik.cpp  Quik.h
src/service/quik/candle/: QuikCandleService.cpp  QuikCandleService.h
src/service/quik/news/: QuikNewsService.cpp  QuikNewsService.h
src/service/quik/order/: QuikOrderService.cpp  QuikOrderService.h
src/service/quik/subscription/: QuikSubscriptionService.cpp  QuikSubscriptionService.h
src/service/quik/utils/: FileUtils.cpp  FileUtils.h  QuikUtils.cpp  QuikUtils.h
src/service/robot/: RobotService.cpp  RobotService.h
src/service/utils/debug/: DebugFunctions.cpp  DebugFunctions.h
src/service/utils/string/: StringUtils.cpp  StringUtils.h
ta-lib/: build.bat
(+3 files in other folders)
